tests/compile_fail/effectful_handler_reused_incompatible_arrow.stderr
error[E0277]: the stage arrow declares an output fact missing from the handler's `Output`
  --> tests/compile_fail/effectful_handler_reused_incompatible_arrow.rs:12:13
   |
12 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
13 | |         Input -> { First, Second } => handler,
14 | |         effects: [],
15 | |         middleware: []
16 | |     );
   | |_____^ this arrow output contract is not contained in the handler's `Output` set
   |
   = help: the trait `ArrowOutputsAreDeclaredByHandler<WithMember<support::First, EmptySet>, SubsetProofStep<MemberFound, SubsetProofStep<MemberAfter<_>, SubsetProofEnd>>>` is not implemented for `WithMember<support::First, WithMember<support::Second, EmptySet>>`
   = note: the stage arrow is canonical: make the handler's `Output` carrier or witness expose the same complete flat fact set, or change the arrow first if the stage contract is wrong; use `stage_fact_set![...]` only for an effectful-transform witness, and a `StageOutputFacts` carrier where values are returned or applied (FLOWIP-120z B9)
note: required by a bound in `main::__obzenflow_assert_effectful_transform_contract`
  --> tests/compile_fail/effectful_handler_reused_incompatible_arrow.rs:12:13
   |
12 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
13 | |         Input -> { First, Second } => handler,
14 | |         effects: [],
15 | |         middleware: []
16 | |     );
   | |     ^
   | |     |
   | |_____required by a bound in this function
   |       required by this bound in `__obzenflow_assert_effectful_transform_contract`
   = note: this error originates in the macro `$crate::__obzenflow_assert_effectful_transform_contract` which comes from the expansion of the macro `obzenflow_dsl::effectful_transform` (in Nightly builds, run with -Z macro-backtrace for more info)
